[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
maturin = "1.7.4"
mypy = "1.13.0"
pre-commit = "4.0.1"
ruff = "0.7.2"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I", "S", "RUF"]

[tool.mypy]
strict = true
pretty = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
